--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/tmi.js": "^1.8.3"
+    "@types/tmi.js": "^1.8.3",
+    "tsc": "^2.0.4",
+    "typescript": "^5.1.5"
   }
 }
