--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "tsc",
+    "heroku-postbuild": "npm install typescript && tsc",
     "start": "node src/app.js"
   },
   "author": "",
