--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "socket.io": "^4.7.1",
     "tmi": "^2.0.0",
     "tmi.js": "^1.8.5",
-    "typescript": "^5.1.5"
-  },
-  "devDependencies": {
+    "typescript": "^5.1.5",
     "@types/express": "^4.17.17",
     "@types/tmi.js": "^1.8.3"
   }
